<resources>
    <string name="app_name">burnOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_workouts">Favorite Workouts</string>
    <string name="contact_us">Contact Us</string>
    <string name="subscribe">Subscription</string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="contact_email">kivytechnology.18@gmail.com</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="male">Male</string>
    <string name="femaletext">Female</string>
    <string name="height">Height (cms)</string>
    <string name="unit">Weight</string>
    <string name="calculate_your_bmi">DONE</string>
    <string name="weight">Weight (lbs)</string>
    <string name="age">Age</string>
    <string name="get_result">GET RESULT</string>
    <string name="done">DONE</string>
    <string name="recalculate">Recalculate</string>
    <string name="trial_desc">BurnOut" is a cutting-edge gym application focused on enhancing your fitness journey. With modules dedicated to Workouts and BMI Calculation, it offers a comprehensive solution for achieving your fitness goals. What sets "BurnOut" apart is its dedication to user privacy. Unlike many fitness apps, "BurnOut" does not collect any personal data. Instead, all user data is securely stored on the device, ensuring maximum privacy and confidentiality. The app also boasts offline functionality, allowing users to access and perform workouts without an internet connection. Stay tuned for future updates, including modules for Yoga and Nutrition, as "BurnOut" continues to evolve as your ultimate fitness companion.\n\nThanks</string>
    <string name="workout_label">Multiple Workouts to Choose</string>
    <string name="yoga_label">Multiple Yoga postures</string>
    <string name="nut_plan">Multiple Yoga Plans</string>
    <string name="bmi">Calculate your BMI</string>
    <string name="description_sub">Skip will let you to use BurnOut application with limited access only. After that you have to buy subscription or in app purchase to use BurnOut.\n\n<b><u>Monthly Access ($7.99/month):</u></b>\nAccess premium workouts for just $7.99/month. Dive into exclusive excercises,Yoga,Nutrition,BMI features, and updates without interruption. No free trial offered and you can cancel it anytime, you wont be charged for the next month renewel date.\n\n<b><u>All-Time Access ($29.99):\n</u></b>Experience unlimited access(Workout,Yoga,\nNutrition,BMI) with a one-time payment of $29.99.No free trial available. As a token of appreciation, limited promo codes are offered to special users who review and rate our app on the Play Store.This offer is valid till Aug 21,2024.\n\n<b>NOTE:</b>\nYoga and Nutrition is not yet launched, but will be provided for free within the plan purchased without any additional charges.</string>
    <string name="buy_subscription_message">Buy any of the Subscription Plan to enjoy more of the workouts</string>
    <string name="no_internet">No Internet Available. Turn on the Internet to Sync with Google Play Store , if you have any Active plan or not. Please restart app for better experience</string>
    <string name="this_confirms_you_have_read_all_about_both_the_purchase_plans_information_and_you_are_good_to_use_this_app">This confirms, you have read all about both the purchase plans information and you are good to use this app.</string>
    <string name="camera">Camera</string>
    <string name="share_on">Share on</string>
    <string name="yoga_link"><![CDATA[https://www.yogajournal.com/poses/]]></string>
    <string name="nutrition_link">https://www.eatwelltas.org.au/recipes/</string>
    <string name="no_favorites_added_nmark_workouts_favorite_from_workout_complete_screen">No Favorites Added\nMark workouts Favorite from Workout Complete Screen</string>

</resources>