<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1E1D1D">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:src="@drawable/back_btn"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="15dp"
            android:text="BMI Calculator"
            android:textAllCaps="true"
            android:textColor="@color/neon_title"
            android:textSize="20dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_above="@id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/male">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textmale"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true"
            android:src="@drawable/male">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/male"
            android:id="@+id/textmale"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_medium"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="20dp"
        android:id="@+id/female">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_centerInParent="true"
            android:layout_above="@id/textfemale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/femaletext"
            android:id="@+id/textfemale"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_medium"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_marginBottom="-50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/heightlayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/height"
            android:textSize="20sp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="150"
            android:layout_marginBottom="50dp"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:id="@+id/currentheight"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentheight"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/unit"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white"
            android:layout_marginRight="10dp"
            android:id="@+id/seekbarforheight">

        </SeekBar>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/calculatebmi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:elevation="10dp"
        android:visibility="visible"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/neon_title"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingStart="15dp"
            android:text="@string/get_result"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </androidx.cardview.widget.CardView>



    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightlayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/weight">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:fontFamily="@font/ubuntu_medium"
            android:id="@+id/textweight"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>


        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_medium"
            android:text="150"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementweight">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/incremetweight"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightlayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/Age">



        <TextView

            android:id="@+id/textage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_medium"
            android:text="22"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementage">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/incrementage"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>